@@ -19,6 +19,7 @@ import microstamp.step1.service.HazardService;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Log4j2
 @Component
@@ -35,7 +36,7 @@ public class HazardServiceImpl implements HazardService {
         log.info("Finding all hazards");
         return hazardRepository.findAll().stream()
                 .map(HazardMapper::toDto)
-                .sorted(Comparator.comparing(HazardReadDto::getName))
+                .sorted(Comparator.comparing(HazardReadDto::getCode))
                 .toList();
     }
 
@@ -49,7 +50,7 @@ public class HazardServiceImpl implements HazardService {
         log.info("Finding hazard by the analysis id: {}", id);
         return hazardRepository.findByAnalysisId(id).stream()
                 .map(HazardMapper::toDto)
-                .sorted(Comparator.comparing(HazardReadDto::getName))
+                .sorted(Comparator.comparing(HazardReadDto::getCode))
                 .toList();
     }
 
@@ -85,11 +86,12 @@ public class HazardServiceImpl implements HazardService {
                 .orElseThrow(() -> new Step1NotFoundException("Hazard", id.toString()));
 
         hazard.setName(hazardUpdateDto.getName());
+        hazard.setCode(hazardUpdateDto.getCode());
         List<Loss> lossEntities = Optional.ofNullable(hazardUpdateDto.getLossIds())
                 .orElseGet(Collections::emptyList)
                 .stream()
                 .map(lossId -> lossRepository.findById(lossId).orElseThrow(() -> new Step1NotFoundException("Loss", lossId.toString())))
-                .toList();
+                .collect(Collectors.toList());
         hazard.setLossEntities(lossEntities);
 
         hazard.setFather(setFatherForUpdate(id, hazardUpdateDto));
@@ -136,7 +138,7 @@ public class HazardServiceImpl implements HazardService {
 
         return children.stream()
                 .map(HazardMapper::toDto)
-                .sorted(Comparator.comparing(HazardReadDto::getName))
+                .sorted(Comparator.comparing(HazardReadDto::getCode))
                 .toList();
     }
 
