@@ -14,10 +14,10 @@ import microstamp.step1.mapper.SystemSafetyConstraintMapper;
 import microstamp.step1.repository.HazardRepository;
 import microstamp.step1.repository.SystemSafetyConstraintRepository;
 import microstamp.step1.service.SystemSafetyConstraintService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Log4j2
 @Component
@@ -35,7 +35,7 @@ public class SystemSafetyConstraintServiceImpl implements SystemSafetyConstraint
         log.info("Find all system safety constraints");
         return systemSafetyConstraintRepository.findAll().stream()
                 .map(SystemSafetyConstraintMapper::toDto)
-                .sorted(Comparator.comparing(SystemSafetyConstraintReadDto::getName))
+                .sorted(Comparator.comparing(SystemSafetyConstraintReadDto::getCode))
                 .toList();
     }
 
@@ -51,7 +51,7 @@ public class SystemSafetyConstraintServiceImpl implements SystemSafetyConstraint
         log.info("Find system safety constraint by the analysis id: {}", id);
         return systemSafetyConstraintRepository.findByAnalysisId(id).stream()
                 .map(SystemSafetyConstraintMapper::toDto)
-                .sorted(Comparator.comparing(SystemSafetyConstraintReadDto::getName))
+                .sorted(Comparator.comparing(SystemSafetyConstraintReadDto::getCode))
                 .toList();
     }
 
@@ -94,13 +94,15 @@ public class SystemSafetyConstraintServiceImpl implements SystemSafetyConstraint
                 .orElseThrow(() -> new Step1NotFoundException("SystemSafetyConstraint", id.toString()));
 
         systemSafetyConstraint.setName(systemSafetyConstraintUpdateDto.getName());
+        systemSafetyConstraint.setCode(systemSafetyConstraintUpdateDto.getCode());
 
         log.info("Finding hazards {} associated with the system safety constraint {}", systemSafetyConstraintUpdateDto.getHazardsId(), systemSafetyConstraint.getId());
         List<Hazard> hazardEntities = Optional.ofNullable(systemSafetyConstraintUpdateDto.getHazardsId())
                 .orElseGet(Collections::emptyList)
                 .stream()
                 .map(hazardId -> hazardRepository.findById(hazardId)
-                        .orElseThrow(() -> new Step1NotFoundException("Hazard", hazardId.toString()))).toList();
+                        .orElseThrow(() -> new Step1NotFoundException("Hazard", hazardId.toString())))
+                .collect(Collectors.toList());;
         systemSafetyConstraint.setHazardEntities(hazardEntities);
 
         log.info("Updating the system safety constraint with id {} setting the name {}", id, systemSafetyConstraint.getName());
